--- a/app/src/main/res/layout/home_light_view_fragment.xml
+++ b/app/src/main/res/layout/home_light_view_fragment.xml
@@ -17,6 +17,12 @@
             android:layout_height="70dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/offlight"/>
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="3dp"
+            android:background="#cccccc" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -56,6 +62,12 @@
             android:layout_height="70dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/onlight"/>
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="3dp"
+            android:background="#cccccc" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
