--- a/app/src/main/res/layout/home_window_view_fragment.xml
+++ b/app/src/main/res/layout/home_window_view_fragment.xml
@@ -21,6 +21,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center">
+            <View
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="3dp"
+                android:layout_marginRight="3dp"
+                android:background="#cccccc" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -28,13 +34,14 @@
                 android:textSize="15dp"
                 android:textColor="@color/basictxtcolor"
                 android:text="창문이"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="3dp"
-                android:textSize="15dp"
+                android:text="'닫혀'"
                 android:textColor="@color/error"
-                android:text="'닫겨'"/>
+                android:textSize="15dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,6 +63,12 @@
             android:layout_height="70dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/onwindow"/>
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="3dp"
+            android:background="#cccccc" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
