--- a/app/src/main/res/layout/main_fragment2.xml
+++ b/app/src/main/res/layout/main_fragment2.xml
@@ -21,12 +21,22 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:weightSum="10"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/mConnectionStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:text="connectCheck"
+                    android:layout_weight="1"
+                    android:textSize="10dp" />
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="0dp"
                     android:src="@drawable/ex_home"
-                    android:padding="30dp"/>
+                    android:padding="30dp"
+                    android:layout_weight="9"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -70,9 +80,16 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/onLight"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:background="@drawable/light" />
+
+                        <ImageView
+                            android:id="@+id/offLight"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/offlight"/>
 
                         <TextView
                             android:layout_width="match_parent"
