--- a/app/src/main/res/layout/home_security_view_fragment.xml
+++ b/app/src/main/res/layout/home_security_view_fragment.xml
@@ -23,30 +23,34 @@
             android:layout_marginTop="3dp"
             android:layout_marginRight="3dp"
             android:background="#cccccc" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:textSize="15dp"
+                android:text="도어락이"
                 android:textColor="@color/basictxtcolor"
-                android:text="도어락이"/>
+                android:textSize="15dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="3dp"
-                android:textSize="15dp"
+                android:text="'잠겨'"
                 android:textColor="@color/error"
-                android:text="'잠겨'"/>
+                android:textSize="15dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15dp"
+                android:text="있습니다."
                 android:textColor="@color/basictxtcolor"
-                android:text="있습니다."/>
+                android:textSize="15dp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -54,44 +58,50 @@
         android:id="@+id/onsecurity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         android:visibility="gone">
+
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/onlock"/>
+            android:background="@drawable/onlock" />
+
         <View
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:layout_marginTop="3dp"
             android:layout_marginRight="3dp"
             android:background="#cccccc" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:textSize="15dp"
+                android:text="도어락이"
                 android:textColor="@color/basictxtcolor"
-                android:text="도어락이"/>
+                android:textSize="15dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="3dp"
-                android:textSize="15dp"
+                android:text="'열려'"
                 android:textColor="@color/complete"
-                android:text="'열려'"/>
+                android:textSize="15dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="15dp"
+                android:text="있습니다."
                 android:textColor="@color/basictxtcolor"
-                android:text="있습니다."/>
+                android:textSize="15dp" />
         </LinearLayout>
     </LinearLayout>
 
