디자인 디테일 수정

--- a/app/src/main/res/layout/community_detail.xml
+++ b/app/src/main/res/layout/community_detail.xml
@@ -121,13 +121,13 @@
                 android:layout_marginRight="5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center">
 
                 <ImageView
                     android:id="@+id/cmdImageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:paddingLeft="10dp" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="300dp" />
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
