--- a/app/src/main/res/layout/main_fragment1.xml
+++ b/app/src/main/res/layout/main_fragment1.xml
@@ -226,7 +226,14 @@
             </LinearLayout>
         </FrameLayout>
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:background="#cccccc"/>
     <ListView
         android:id="@+id/my_home_list"
         android:layout_width="match_parent"
