--- a/app/src/main/res/layout/community_comment_item.xml
+++ b/app/src/main/res/layout/community_comment_item.xml
@@ -22,8 +22,8 @@
 
         <TextView
             android:id="@+id/cmi_content"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:gravity="center"
             android:text="내용"
@@ -31,7 +31,7 @@
 
         <EditText
             android:id="@+id/cmi_modify_content"
-            android:layout_width="wrap_content"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="수정내용"
@@ -41,7 +41,6 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -54,7 +53,11 @@
                 android:text="등록"
                 android:textColor="@color/basictxtcolor"
                 android:textSize="11dp" />
-
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:gravity="center">
             <Button
                 android:id="@+id/cmi_modify"
                 android:layout_width="30dp"
