--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,8 +16,7 @@
         android:id="@+id/profileImage"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/emptyprofile"/>
+        android:layout_marginTop="30dp"/>
 
     <TextView
         android:id="@+id/navi_name"
