--- a/app/src/main/res/layout/settings_main.xml
+++ b/app/src/main/res/layout/settings_main.xml
@@ -71,6 +71,17 @@
             android:text="단체 알림 기능"
             android:textColor="@color/com_facebook_button_background_color_focused_disabled"
             android:textSize="12dp" />
+
+        <Switch
+            android:id="@+id/autoWindow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="창문 자동 개폐 기능"
+            android:textColor="@color/com_facebook_button_background_color_focused_disabled"
+            android:textSize="12dp" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
