디자인 디테일 수정

--- a/app/src/main/res/layout/main_fragment2.xml
+++ b/app/src/main/res/layout/main_fragment2.xml
@@ -69,8 +69,7 @@
                             android:id="@+id/offLight"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:background="@drawable/offlight"
-                            android:visibility="gone"/>
+                            android:background="@drawable/offlight" />
 
                         <TextView
                             android:layout_width="match_parent"
