--- a/app/src/main/res/layout/complain_detail.xml
+++ b/app/src/main/res/layout/complain_detail.xml
@@ -60,7 +60,7 @@
             android:id="@+id/modify"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/modify_b" />
+            android:background="@drawable/modify" />
 
         <Button
             android:id="@+id/delete"
