--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 
     <color name="titlecolor">#ffffff</color>
     <color name="basictxtcolor">#224040</color>
-    <color name="titlebarcolor">#82b1d8</color>
+    <color name="titlebarcolor">#4db0eb</color>
 
     <color name="allbackg">#F0F0F0</color>
     <color name="onBtnColor">#82baff</color>
