서버 온오프 기능

--- a/app/src/main/res/layout/settings_main.xml
+++ b/app/src/main/res/layout/settings_main.xml
@@ -79,7 +79,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:text="창문 자동 개폐 기능"
+            android:text="집 감지모드"
             android:textColor="@color/com_facebook_button_background_color_focused_disabled"
             android:textSize="12dp" />
     </LinearLayout>
