--- a/app/src/main/res/layout/join_main.xml
+++ b/app/src/main/res/layout/join_main.xml
@@ -40,32 +40,35 @@
         android:layout_marginTop="30dp"
         android:orientation="vertical"
         android:weightSum="4">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="이름"
                 android:textColor="@color/basictxtcolor"
                 android:textSize="@dimen/contentSize" />
+
             <EditText
                 android:id="@+id/joinName"
-                android:layout_width="250dp"
+                android:layout_width="230dp"
                 android:layout_height="50dp"
-                android:textSize="@dimen/contentSize"/>
+                android:textSize="@dimen/contentSize" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="아이디"
                 android:textColor="@color/basictxtcolor"
@@ -73,7 +76,7 @@
 
             <EditText
                 android:id="@+id/joinId"
-                android:layout_width="180dp"
+                android:layout_width="160dp"
                 android:layout_height="50dp"
                 android:hint="소문자와 숫자를 입력해주세요"
                 android:textSize="@dimen/contentSize" />
@@ -87,6 +90,7 @@
                 android:textColor="@color/basictxtcolor"
                 android:textSize="14sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -100,7 +104,7 @@
                 android:text="사용가능한 아이디입니다."
                 android:textColor="@color/complete"
                 android:textSize="13dp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -108,6 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center">
+
             <TextView
                 android:id="@+id/idfail"
                 android:layout_width="match_parent"
@@ -116,35 +121,37 @@
                 android:text="중복된 아이디가 존재합니다."
                 android:textColor="@color/error"
                 android:textSize="13dp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="이메일"
                 android:textColor="@color/basictxtcolor"
                 android:textSize="@dimen/contentSize" />
+
             <EditText
                 android:id="@+id/joinEmail"
-                android:layout_width="250dp"
+                android:layout_width="230dp"
                 android:layout_height="50dp"
-                android:textSize="@dimen/contentSize"/>
+                android:textSize="@dimen/contentSize" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="비밀번호"
                 android:textColor="@color/basictxtcolor"
@@ -152,31 +159,34 @@
 
             <EditText
                 android:id="@+id/joinPw"
-                android:layout_width="250dp"
+                android:layout_width="230dp"
                 android:layout_height="50dp"
-                android:hint="영문자와 숫자를 입력해주세요"
+                android:hint="영소문자와 숫자를 입력해주세요"
                 android:inputType="textPassword"
                 android:textSize="@dimen/contentSize" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="비밀번호 확인"
                 android:textColor="@color/basictxtcolor"
                 android:textSize="@dimen/contentSize" />
+
             <EditText
                 android:id="@+id/joinPwr"
-                android:layout_width="250dp"
+                android:layout_width="230dp"
                 android:layout_height="50dp"
-                android:textSize="@dimen/contentSize"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textSize="@dimen/contentSize" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -190,7 +200,7 @@
                 android:text="비밀번호가 일치합니다."
                 android:textColor="@color/complete"
                 android:textSize="13dp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -207,7 +217,7 @@
                 android:text="비밀번호 불일치합니다."
                 android:textColor="@color/error"
                 android:textSize="13dp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
