--- a/app/src/main/res/layout/notice_list_view.xml
+++ b/app/src/main/res/layout/notice_list_view.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="55dp"
+    android:layout_height="40dp"
     android:orientation="horizontal">
 
     <TextView
@@ -10,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:paddingLeft="15dp"
+        android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:text="예시입니다"
         android:textColor="@color/basictxtcolor"
