--- a/app/src/main/res/layout/notice_list_view.xml
+++ b/app/src/main/res/layout/notice_list_view.xml
@@ -6,13 +6,12 @@
 
     <TextView
         android:id="@+id/ntitle"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
         android:text="예시입니다"
+        android:layout_marginLeft="10dp"
         android:textColor="@color/basictxtcolor"
-        android:textSize="14dp" />
+        android:textSize="15dp" />
 
 </LinearLayout>
