--- a/app/src/main/res/layout/community_detail.xml
+++ b/app/src/main/res/layout/community_detail.xml
@@ -53,7 +53,7 @@
                     style="@style/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="10dp"
                     android:text="게시판 제목" />
             </LinearLayout>
             <View
@@ -101,14 +101,14 @@
 
                 <Button
                     android:id="@+id/modify"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:background="@drawable/modify" />
 
                 <Button
                     android:id="@+id/delete"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/cancel_b" />
             </LinearLayout>
@@ -189,13 +189,14 @@
 
                         <Button
                             android:id="@+id/cmmd_cmt_insert"
-                            android:layout_width="40dp"
+                            android:layout_width="45dp"
                             android:layout_height="30dp"
                             android:layout_marginLeft="10dp"
                             android:background="@drawable/btn_on"
-                            android:text="등록"
-                            android:textColor="@color/basictxtcolor"
-                            android:textSize="12dp" />
+                            android:text="등 록"
+                            android:textColor="@color/titlecolor"
+                            android:textSize="11dp"
+                            android:textStyle="bold"/>
                         <Button
                             android:id="@+id/cmdRefresh"
                             android:layout_width="20dp"
