--- a/app/src/main/res/layout/community_insert.xml
+++ b/app/src/main/res/layout/community_insert.xml
@@ -49,6 +49,7 @@
             style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="#ffffff"
             android:text="제목: "
             android:textColor="@color/basictxtcolor" />
@@ -79,6 +80,7 @@
             style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="#ffffff"
             android:text="내용 "
             android:textColor="@color/basictxtcolor" />
@@ -90,16 +92,18 @@
         android:background="#cccccc"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/cmiImageView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:background="#ffffff"
-            android:padding="5dp" />
+            android:padding="10dp" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
@@ -120,7 +124,8 @@
             android:background="#ffffff"
             android:gravity="top"
             android:hint="내용을 입력하세요"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:padding="10dp" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
@@ -137,14 +142,14 @@
 
         <Button
             android:id="@+id/cmiPhotonLoad"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="@drawable/imageadd" />
 
         <Button
             android:id="@+id/btnPhotoDelete"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginRight="5dp"
             android:background="@drawable/imagedelete" />
 
@@ -168,9 +173,10 @@
             android:layout_width="60dp"
             android:layout_height="30dp"
             android:background="@drawable/btn_on"
-            android:text="등록"
-            android:textColor="@color/basictxtcolor"
-            android:textSize="15dp" />
+            android:text="등 록"
+            android:textColor="@color/titlecolor"
+            android:textSize="11dp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/cancel"
@@ -178,9 +184,10 @@
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
             android:background="@drawable/btn_gray"
-            android:text="취소"
-            android:textColor="@color/basictxtcolor"
-            android:textSize="15dp" />
+            android:text="취 소"
+            android:textColor="@color/titlecolor"
+            android:textSize="11dp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 
