--- a/app/src/main/res/layout/community_modify.xml
+++ b/app/src/main/res/layout/community_modify.xml
@@ -50,6 +50,7 @@
             style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="#ffffff"
             android:text="제목: "
             android:textColor="@color/basictxtcolor" />
@@ -80,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="#ffffff"
-            android:padding="5dp" />
+            android:padding="10dp" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
@@ -96,6 +97,7 @@
             style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="#ffffff"
             android:text="내용 "
             android:textColor="@color/basictxtcolor" />
@@ -119,7 +121,8 @@
             android:background="#ffffff"
             android:gravity="top"
             android:hint="내용을 입력하세요"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:padding="10dp" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
@@ -136,15 +139,16 @@
 
         <Button
             android:id="@+id/cmmPhotonLoad"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="@drawable/imageadd"
             android:textColor="@color/basictxtcolor" />
 
         <Button
             android:id="@+id/btnPhotoDelete"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/imagedelete"
             android:textColor="@color/basictxtcolor" />
 
@@ -163,23 +167,25 @@
 
         <Button
             android:id="@+id/modify"
-            android:layout_width="70dp"
+            android:layout_width="60dp"
             android:layout_height="30dp"
             android:background="@drawable/btn_on"
             android:onClick="btnAddClicked"
-            android:text="등록"
-            android:textColor="@color/basictxtcolor"
-            android:textSize="15dp" />
+            android:text="등 록"
+            android:textColor="@color/titlecolor"
+            android:textSize="11dp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/cancel"
-            android:layout_width="70dp"
+            android:layout_width="60dp"
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
             android:background="@drawable/btn_gray"
-            android:text="취소"
-            android:textColor="@color/basictxtcolor"
-            android:textSize="15dp" />
+            android:text="취 소"
+            android:textColor="@color/titlecolor"
+            android:textSize="11dp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
