--- a/app/src/main/res/layout/community_modify.xml
+++ b/app/src/main/res/layout/community_modify.xml
@@ -74,11 +74,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/cmmImageView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:background="#ffffff"
             android:padding="10dp" />
