--- a/app/src/main/res/layout/complain_detail.xml
+++ b/app/src/main/res/layout/complain_detail.xml
@@ -50,6 +50,27 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right">
+
+        <TextView
+            android:id="@+id/cpdwriter"
+            style="@style/content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:text="작성자" />
+
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#cccccc"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:padding="3dp"
@@ -105,26 +126,7 @@
             android:background="#cccccc"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <TextView
-                style="@style/content"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginLeft="10dp"
-                android:background="#ffffff"
-                android:text="작성자 : " />
-
-            <TextView
-                android:id="@+id/cpdwriter"
-                style="@style/content"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:background="#ffffff"
-                android:text="작성자" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
